--- a/static/index.html
+++ b/static/index.html
@@ -246,7 +246,7 @@
                     resultsContainer.innerHTML = jsonHtml;
                     
                     // Add only copy button control
-                    addCopyButton();
+                    // addCopyButton();
                     
                     errorMessage.textContent = '';
                 })
